--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,7 +90,6 @@ android {
 //   }
 // }
 
-
 task exponentPrebuildStep(type: Exec) {
   workingDir '../'
   if (System.getProperty('os.name').toLowerCase().contains('windows')) {
@@ -101,8 +100,11 @@ task exponentPrebuildStep(type: Exec) {
 }
 preBuild.dependsOn exponentPrebuildStep
 
-
 dependencies {
+    compile project(':appcenter-push')
+    compile project(':appcenter-crashes')
+    compile project(':appcenter-analytics')
+    compile project(':appcenter')
   compile fileTree(dir: 'libs', include: ['*.jar'])
 
   compile 'com.android.support:multidex:1.0.1'
@@ -165,7 +167,6 @@ dependencies {
   androidTestCompile 'com.google.code.findbugs:jsr305:3.0.0'
   androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
   androidTestCompile 'com.azimolabs.conditionwatcher:conditionwatcher:0.2'
-
 
   
   compile('host.exp.exponent:expoview:26.0.0@aar') {
